<resources>
    <string name="app_name">MyBooks</string>
    <string name="mybooks">MyBooks</string>
    <string name="welcome_to_mybooks">Welcome to MyBooks</string>
    <string name="genre">Genre</string>
    <string name="image">image</string>
    <string name="new_books">New Books</string>
    <string name="synopsis">Synopsis</string>
    <string name="reviews">Reviews</string>
    <string name="see_writer_profile">See Writer Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="description">Description</string>
</resources>