<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".ui.detailBook.DetailBookActivity">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeDetail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:visibility="invisible"
                    tools:visibility="visible">

                    <ImageButton
                        android:id="@+id/icBack"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="16dp"
                        android:background="@drawable/ic_baseline_arrow_back_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="Detail Book"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@id/icBack"
                        app:layout_constraintTop_toTopOf="parent" />


                    <ImageView
                        android:id="@+id/ivBook"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                    <TextView
                        android:id="@+id/tvTitleBook"
                        app:layout_constraintTop_toBottomOf="@id/tvTitle"
                        app:layout_constraintStart_toEndOf="@id/ivBook"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="40dp"
                        tools:text="Yooooooo"
                        android:layout_width="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppinsmedium"
                        android:maxLines="3"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tvWriter"
                        app:layout_constraintTop_toBottomOf="@id/tvTitleBook"
                        app:layout_constraintStart_toEndOf="@id/ivBook"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="Yooooooo"
                        android:layout_width="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/poppinsregular"
                        android:maxLines="2"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tvSeeWriter"
                        app:layout_constraintTop_toBottomOf="@id/tvWriter"
                        app:layout_constraintStart_toEndOf="@id/ivBook"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/see_writer_profile"
                        android:layout_width="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/poppinsregular"
                        android:maxLines="2"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/labelSynopsis"
                        app:layout_constraintTop_toBottomOf="@id/ivBook"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/synopsis"
                        android:layout_width="0dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/poppinsmedium"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tvSynopsis"
                        app:layout_constraintTop_toBottomOf="@id/labelSynopsis"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="@string/synopsis"
                        android:layout_width="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/poppinsregular"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/labelReviews"
                        app:layout_constraintTop_toBottomOf="@id/tvSynopsis"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/reviews"
                        android:layout_width="0dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/poppinsmedium"
                        android:layout_height="wrap_content"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvReviews"
                        app:layout_constraintTop_toBottomOf="@id/labelReviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>