<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".ui.detailWriter.DetailWriterActivity">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeDetail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:visibility="invisible"
                    tools:visibility="visible">

                    <ImageButton
                        android:id="@+id/icBack"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="16dp"
                        android:background="@drawable/ic_baseline_arrow_back_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="Detail Writer"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@id/icBack"
                        app:layout_constraintTop_toTopOf="parent" />


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                    <TextView
                        android:id="@+id/labelName"
                        app:layout_constraintTop_toBottomOf="@id/ivProfile"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/name"
                        android:layout_width="0dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/poppinsmedium"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tvName"
                        app:layout_constraintTop_toBottomOf="@id/labelName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="name"
                        android:layout_width="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/poppinsregular"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/labelEmail"
                        app:layout_constraintTop_toBottomOf="@id/tvName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/email"
                        android:layout_width="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/poppinsmedium"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tvEmail"
                        app:layout_constraintTop_toBottomOf="@id/labelEmail"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="Email"
                        android:layout_width="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/poppinsregular"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/labelPhone"
                        app:layout_constraintTop_toBottomOf="@id/tvEmail"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="Phone"
                        android:layout_width="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/poppinsmedium"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tvPhone"
                        app:layout_constraintTop_toBottomOf="@id/labelPhone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="Email"
                        android:layout_width="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/poppinsregular"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/labelDesc"
                        app:layout_constraintTop_toBottomOf="@id/tvPhone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/description"
                        android:layout_width="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/poppinsmedium"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tvDesc"
                        app:layout_constraintTop_toBottomOf="@id/labelDesc"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="Description"
                        android:layout_width="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/poppinsregular"
                        android:layout_height="wrap_content"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>